# MBOT

./: .gitignore
install/: local_setup.sh  setup.sh
install/pico_serial_bridge/lib/pico_serial_bridge/: cmd_vel_serial_bridge
install/pico_serial_bridge/share/pico_serial_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/pico_serial_bridge/: setup.cfg  setup.py
src/pico_serial_bridge/pico_serial_bridge/: cmd_vel_serial_bridge.py  encoder_parser.py
