<?xml version="1.0"?>
<package format="3">
  <name>pico_serial_bridge</name>
  <version>0.0.1</version>
  <description>ROS 2 serial bridge for Raspberry Pi Pico.</description>
  <maintainer email="mallu@example.com">mallu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
